<resources>
    <string name="app_name">SmartLib4Admin</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_qr_code">扫一扫借书</string>
    <string name="search_hint">搜索你想要的书本</string>

    <string name="login">登陆</string>
    <string name="user_id">学号:</string>
    <string name="password">密码:</string>
    <string name="et_user_id_hint">请输入你的账号</string>
    <string name="et_password_hint">请输入你的密码</string>
    <string name="user_id_not_empty">user id不能为空!!!</string>
    <string name="password_not_empty">密码不能为空!!!</string>


    <array name="admin_functions">
        <item>全部</item>
        <item>已借</item>
    </array>


    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <array name="book_type">
        <item>C,C++</item>
        <item>Java</item>
        <item>JS</item>
        <item>数据库</item>
        <item>移动端</item>
        <item>前端</item>
        <item>大数据</item>
        <item>后端</item>
        <item>操作系统</item>
        <item>人工智能</item>
        <item>PC端</item>
        <item>人机交互</item>
        <item>思维锻炼</item>
        <item>Other</item>
    </array>


</resources>
