<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:wheel="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">


    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:visibility="gone"
        wheel:barColor="@color/GREEN_SEA"
        wheel:progressIndeterminate="true"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/user_id"/>

            <EditText
                android:id="@+id/et_user_id"
                android:layout_height="wrap_content"
                android:hint="@string/et_user_id_hint"/>

        </TableRow>


        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_height="wrap_content"
                android:hint="@string/et_password_hint"
                android:inputType="textPassword"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_login"
                android:layout_height="@dimen/button_height"
                android:layout_span="2"
                android:text="@string/login"/>


        </TableRow>


    </TableLayout>


</FrameLayout>